# privipod

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.md  MANIFEST.in  README.md  docker-compose.yml  privipod.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  pypi.yml
docker/: Caddyfile  Dockerfile
docs/: changelog.rst  conf.py  contributing.rst  faq.rst  index.rst  security.rst  usage.rst
docs/install/: deploy.rst  index.rst  local.rst
privipod/: commands.py  config.py  server.py
privipod/migrations/: 0001_initial.py
privipod/public/: site.webmanifest
privipod/static/: site.css  site.js
privipod/templates/: app.html  dashboard.html  pod_create.html  pod_not_found.html  pod_view.html
privipod/templates/registration/: login.html
tests/: Dockerfile  conftest.py  docker-compose.yml  test_flows.py  test_pod_features.py  test_security.py  test_server__models.py  test_server__views_dashboard.py  test_server__views_misc.py  test_server__views_pod_create.py  test_server__views_pod_delete.py  test_server__views_pod_status.py  test_server__views_pod_view.py
tests/integration/: conftest.py  test_flows.py  test_pod_features.py
