[project]
name = "privipod"
description = "Lightweight self-hosted service for sharing secrets and files"
dynamic = ["version"]
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Richard Terry", email = "code@radiac.net" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "nanodjango",
    "click",
    "django-style",
]

[project.scripts]
privipod = "privipod.commands:invoke"

[project.urls]
Homepage = "https://radiac.net/projects/privipod/"
Documentation = "https://privipod.readthedocs.io/en/latest/"
Repository = "https://github.com/radiac/privipod"
Issues = "https://github.com/radiac/privipod/issues"
Changelog = "https://privipod.readthedocs.io/en/latest/changelog.html"

[dependency-groups]
docs = [
    "sphinx",
    "sphinx-radiac-theme",
    "sphinx-autobuild",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-playwright",
    "pytest-django",
    "pytest-asyncio",
    "django-browser-reload",
    "requests",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["privipod*"]

[tool.setuptools.package-data]
privipod = ["templates/*", "static/*", "public/*"]

[tool.setuptools.dynamic]
version = {attr = "privipod.__version__"}

[tool.uv.sources]
sphinx-radiac-theme = { git = "https://github.com/radiac/sphinx_radiac_theme" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=privipod --cov-report=term --cov-report=html --cov-branch --cov-report=xml"
testpaths = [
    "tests",
    "privipod",
    "examples",
]
pythonpath = ["."]

[tool.coverage.run]
source = ["privipod"]

[tool.ruff]
line-length = 88
lint.select = ["E", "F"]
lint.ignore = [
    "E501",  # line length
]
exclude = [
    ".git",
    "dist",
]
